--- a/test/gtest/Makefile.am
+++ b/test/gtest/Makefile.am
@@ -64,47 +64,48 @@ gtest_CXXFLAGS = -std=gnu++11 \
 	-DGTEST_UCM_HOOK_LIB_DIR="\"${abs_builddir}/ucm/test_dlopen/.libs\"" \
 	-DGTEST_UCC_TOP_SRCDIR="\"${UCC_TOP_SRCDIR}\""
 
-gtest_SOURCES =                     \
-	common/gtest-all.cc             \
-	common/test_obj_size.cc         \
-	common/main.cc                  \
-	common/test_ucc.cc              \
-	tl/tl_test.cc                   \
-	core/test_lib_config.cc         \
-	core/test_lib.cc                \
-	core/test_context_config.cc     \
-	core/test_context.cc            \
-	core/test_mc.cc                 \
-	core/test_mc_reduce.cc          \
-	core/test_team.cc               \
-	core/test_schedule.cc           \
-	core/test_topo.cc               \
-	core/test_service_coll.cc       \
-	core/test_timeout.cc            \
-	core/test_utils.cc              \
-	coll/test_barrier.cc            \
-	coll/test_alltoall.cc           \
-	coll/test_alltoallv.cc          \
-	coll/test_allgather.cc          \
-	coll/test_allgatherv.cc         \
-	coll/test_gather.cc         	\
-	coll/test_gatherv.cc         	\
-	coll/test_bcast.cc              \
-	coll/test_reduce.cc             \
-	coll/test_allreduce.cc          \
-	coll/test_reduce_scatter.cc     \
-	coll/test_reduce_scatterv.cc    \
-	coll/test_scatter.cc         	\
-	coll/test_scatterv.cc         	\
-	utils/test_string.cc            \
-	utils/test_ep_map.cc            \
-	utils/test_lock_free_queue.cc   \
-	utils/test_math.cc              \
-	utils/test_cfg_file.cc          \
-	utils/test_parser.cc            \
-	coll_score/test_score.cc        \
-	coll_score/test_score_str.cc    \
-	coll_score/test_score_update.cc \
+gtest_SOURCES =                           \
+	common/gtest-all.cc                   \
+	common/test_obj_size.cc               \
+	common/main.cc                        \
+	common/test_ucc.cc                    \
+	tl/tl_test.cc                         \
+	core/test_lib_config.cc               \
+	core/test_lib.cc                      \
+	core/test_context_config.cc           \
+	core/test_context.cc                  \
+	core/test_mc.cc                       \
+	core/test_mc_reduce.cc                \
+	core/test_team.cc                     \
+	core/test_schedule.cc                 \
+	core/test_topo.cc                     \
+	core/test_service_coll.cc             \
+	core/test_timeout.cc                  \
+	core/test_utils.cc                    \
+	coll/test_barrier.cc                  \
+	coll/test_alltoall.cc                 \
+	coll/test_alltoallv.cc                \
+	coll/test_allgather.cc                \
+	coll/test_allgatherv.cc               \
+	coll/test_gather.cc                   \
+	coll/test_gatherv.cc                  \
+	coll/test_bcast.cc                    \
+	coll/test_reduce.cc                   \
+	coll/test_allreduce_sliding_window.cc \
+	coll/test_allreduce.cc                \
+	coll/test_reduce_scatter.cc           \
+	coll/test_reduce_scatterv.cc          \
+	coll/test_scatter.cc                  \
+	coll/test_scatterv.cc                 \
+	utils/test_string.cc                  \
+	utils/test_ep_map.cc                  \
+	utils/test_lock_free_queue.cc         \
+	utils/test_math.cc                    \
+	utils/test_cfg_file.cc                \
+	utils/test_parser.cc                  \
+	coll_score/test_score.cc              \
+	coll_score/test_score_str.cc          \
+	coll_score/test_score_update.cc       \
 	active_set/test_active_set.cc
 
 if TL_MLX5_ENABLED
@@ -134,13 +135,20 @@ gtest_LDFLAGS  += $(HIP_LDFLAGS)
 gtest_LDADD    += $(HIP_LIBS)
 endif
 
+if HAVE_UCX
+gtest_CXXFLAGS += $(UCX_CXXFLAGS)
+gtest_CPPFLAGS += $(UCX_CPPFLAGS)
+gtest_LDFLAGS  += $(UCX_LDFLAGS)
+gtest_LDADD    += $(UCX_LIBS) $(UCX_LIBADD)
+endif
 
-noinst_HEADERS =            \
-	common/gtest.h          \
-	common/test.h           \
-	common/test_ucc.h       \
-	core/test_context.h     \
-	core/test_mc_reduce.h   \
+noinst_HEADERS =                         \
+	common/gtest.h                       \
+	common/test.h                        \
+	common/test_ucc.h                    \
+	core/test_context.h                  \
+	core/test_mc_reduce.h                \
+	coll/test_allreduce_sliding_window.h \
 	coll_score/test_score.h
 
 .PHONY: test test gdb valgrind fix_rpath ucc
