TL/UCP: initial skeleton

--- a/src/components/tl/ucp/Makefile.am
+++ b/src/components/tl/ucp/Makefile.am
@@ -15,6 +15,7 @@ allgather =                        \
 	allgather/allgather_ring.c     \
 	allgather/allgather_neighbor.c \
 	allgather/allgather_bruck.c    \
+	allgather/allgather_sparbit.c  \
 	allgather/allgather_knomial.c
 
 allgatherv =                     \
