TL/UCP: Add xgvmi allgather

--- a/src/components/tl/ucp/Makefile.am
+++ b/src/components/tl/ucp/Makefile.am
@@ -16,7 +16,8 @@ allgather =                        \
 	allgather/allgather_neighbor.c \
 	allgather/allgather_bruck.c    \
 	allgather/allgather_sparbit.c  \
-	allgather/allgather_knomial.c
+	allgather/allgather_knomial.c  \
+	allgather/allgather_xgvmi.c
 
 allgatherv =                     \
 	allgatherv/allgatherv.h      \
