TL/UCP: Refactor, add alltoall

--- a/src/components/tl/ucp/Makefile.am
+++ b/src/components/tl/ucp/Makefile.am
@@ -29,6 +29,7 @@ alltoall =                       \
 	alltoall/alltoall.c          \
 	alltoall/alltoall_onesided.c \
 	alltoall/alltoall_pairwise.c \
+	alltoall/alltoall_xgvmi.c    \
 	alltoall/alltoall_bruck.c
 
 alltoallv =                        \
