--- a/contrib/ucc.conf
+++ b/contrib/ucc.conf
@@ -90,6 +90,12 @@ UCC_TL_UCP_ALLREDUCE_KN_RADIX=0-8k:host:8,8k-inf:host:2
 UCC_TL_UCP_ALLREDUCE_SRA_KN_RADIX=8
 UCC_TL_UCP_TUNE=allreduce:0-8k:@0#allreduce:8k-inf:@1
 
+#NVIDIA Grace, Generic 1 node
+[vendor=nvidia model=grace nnodes=1]
+UCC_TL_UCP_ALLREDUCE_KN_RADIX=0-8:host:2,8-64:host:3,64-4k:host:2
+UCC_TL_UCP_ALLREDUCE_SRA_KN_RADIX=4096-8192:host:96,8192-16384:host:3,16384-32768:host:8,32768-65536:host:16,65536-131072:host:32,131072-262144:host:2,262144-524288:host:3,524288-1048576:host:2
+UCC_TL_UCP_TUNE=allreduce:0-4k:@0#allreduce:4k-inf:@1
+
 #NVIDIA Grace, 2 socket (C2):
 [vendor=nvidia model=grace team_size=144 sock=72 nnodes=1]
 UCC_TL_UCP_ALLREDUCE_KN_RADIX=0-4k:host:2
