--- a/contrib/ucc.conf
+++ b/contrib/ucc.conf
@@ -89,3 +89,61 @@ UCC_TL_UCP_TUNE=allreduce:0-16k:@0#allreduce:16k-inf:@1
 UCC_TL_UCP_ALLREDUCE_KN_RADIX=0-8k:host:8,8k-inf:host:2
 UCC_TL_UCP_ALLREDUCE_SRA_KN_RADIX=8
 UCC_TL_UCP_TUNE=allreduce:0-8k:@0#allreduce:8k-inf:@1
+
+#NVIDIA Grace, Generic 1 node
+[vendor=nvidia model=grace nnodes=1]
+UCC_TL_UCP_ALLREDUCE_KN_RADIX=0-8:host:2,8-64:host:3,64-4k:host:2
+UCC_TL_UCP_ALLREDUCE_SRA_KN_RADIX=4096-8192:host:96,8192-16384:host:3,16384-32768:host:8,32768-65536:host:16,65536-131072:host:32,131072-262144:host:2,262144-524288:host:3,524288-1048576:host:2
+UCC_TL_UCP_TUNE=allreduce:0-4k:@0#allreduce:4k-inf:@1
+
+#NVIDIA Grace, 2 socket (C2):
+[vendor=nvidia model=grace team_size=144 sock=72 nnodes=1]
+UCC_TL_UCP_ALLREDUCE_KN_RADIX=0-4k:host:2
+UCC_TL_UCP_ALLREDUCE_SRA_KN_RADIX=4096-8192:host:96,8192-16384:host:4,16384-32768:host:6,32768-65536:host:18,65536-131072:host:32,131072-262144:host:72,262144-524288:host:3,524288-1048576:host:2
+UCC_TL_UCP_TUNE=allreduce:0-4k:@0#allreduce:4k-inf:@1
+
+[vendor=nvidia model=grace team_size=128 sock=64 nnodes=1]
+UCC_TL_UCP_ALLREDUCE_KN_RADIX=0-4k:host:2
+UCC_TL_UCP_ALLREDUCE_SRA_KN_RADIX=4096-8192:host:72,8192-16384:host:4,16384-32768:host:8,32768-65536:host:16,65536-131072:host:32,131072-262144:host:64,262144-524288:host:3,524288-1048576:host:3
+UCC_TL_UCP_TUNE=allreduce:0-4k:@0#allreduce:4k-inf:@1
+
+[vendor=nvidia model=grace team_size=64 sock=32 nnodes=1]
+UCC_TL_UCP_ALLREDUCE_KN_RADIX=0-4k:host:2
+UCC_TL_UCP_ALLREDUCE_SRA_KN_RADIX=4096-8192:host:2,8192-16384:host:4,16384-32768:host:8,32768-65536:host:16,65536-131072:host:32,131072-262144:host:3,262144-524288:host:3,524288-1048576:host:2
+UCC_TL_UCP_TUNE=allreduce:0-4k:@0#allreduce:4k-inf:@1
+
+[vendor=nvidia model=grace team_size=32 sock=16 nnodes=1]
+UCC_TL_UCP_ALLREDUCE_KN_RADIX=0-4k:host:2
+UCC_TL_UCP_ALLREDUCE_SRA_KN_RADIX=4096-8192:host:2,8192-16384:host:4,16384-32768:host:8,32768-65536:host:16,65536-131072:host:3,131072-262144:host:2,262144-524288:host:2,524288-1048576:host:2
+UCC_TL_UCP_TUNE=allreduce:0-4k:@0#allreduce:4k-inf:@1
+
+[vendor=nvidia model=grace team_size=16 sock=8 nnodes=1]
+UCC_TL_UCP_ALLREDUCE_KN_RADIX=0-4k:host:2
+UCC_TL_UCP_ALLREDUCE_SRA_KN_RADIX=4096-8192:host:2,8192-16384:host:8,16384-32768:host:8,32768-65536:host:2,65536-131072:host:2,131072-262144:host:2,262144-524288:host:2,524288-1048576:host:2
+UCC_TL_UCP_TUNE=allreduce:0-4k:@0#allreduce:4k-inf:@1
+
+#NVIDIA Grace, 1 socket (CG):
+[vendor=nvidia model=grace team_size=72 sock=72 nnodes=1]
+UCC_TL_UCP_ALLREDUCE_KN_RADIX=0-64:host:3,64-4k:host:2
+UCC_TL_UCP_ALLREDUCE_SRA_KN_RADIX=4096-8192:host:6,8192-16384:host:6,16384-32768:host:6,32768-65536:host:16,65536-131072:host:32,131072-262144:host:48,262144-524288:host:2,524288-1048576:host:2
+UCC_TL_UCP_TUNE=allreduce:0-4k:@0#allreduce:4k-inf:@1
+
+[vendor=nvidia model=grace team_size=64 sock=64 nnodes=1]
+UCC_TL_UCP_ALLREDUCE_KN_RADIX=0-4k:host:2
+UCC_TL_UCP_ALLREDUCE_SRA_KN_RADIX=4096-8192:host:2,8192-16384:host:4,16384-32768:host:8,32768-65536:host:18,65536-131072:host:32,131072-262144:host:48,262144-524288:host:2,524288-1048576:host:2
+UCC_TL_UCP_TUNE=allreduce:0-4k:@0#allreduce:4k-inf:@1
+
+[vendor=nvidia model=grace team_size=32 sock=32 nnodes=1]
+UCC_TL_UCP_ALLREDUCE_KN_RADIX=0-4k:host:2
+UCC_TL_UCP_ALLREDUCE_SRA_KN_RADIX=4096-8192:host:2,8192-16384:host:4,16384-32768:host:8,32768-65536:host:16,65536-131072:host:144,131072-262144:host:2,262144-524288:host:2,524288-1048576:host:4
+UCC_TL_UCP_TUNE=allreduce:0-4k:@0#allreduce:4k-inf:@1
+
+[vendor=nvidia model=grace team_size=16 sock=16 nnodes=1]
+UCC_TL_UCP_ALLREDUCE_KN_RADIX=0-4k:host:2
+UCC_TL_UCP_ALLREDUCE_SRA_KN_RADIX=4096-8192:host:2,8192-16384:host:4,16384-32768:host:8,32768-65536:host:16,65536-131072:host:3,131072-262144:host:2,262144-524288:host:4,524288-1048576:host:4
+UCC_TL_UCP_TUNE=allreduce:0-4k:@0#allreduce:4k-inf:@1
+
+[vendor=nvidia model=grace team_size=8 sock=8 nnodes=1]
+UCC_TL_UCP_ALLREDUCE_KN_RADIX=0-8k:host:2
+UCC_TL_UCP_ALLREDUCE_SRA_KN_RADIX=8192-16384:host:2,16384-32768:host:4,32768-65536:host:16,65536-131072:host:18,131072-262144:host:6,262144-524288:host:96,524288-1048576:host:4
+UCC_TL_UCP_TUNE=allreduce:0-8k:@0#allreduce:8k-inf:@1
