--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -9,7 +9,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y --no-install-recommends doxygen doxygen-latex
+        sudo apt-get install -y --no-install-recommends doxygen doxygen-latex cm-super texlive-fonts-recommended
     - uses: actions/checkout@v1
     - name: Build UCC docs
       run: |
