--- a/.github/workflows/hpcsdk.yaml
+++ b/.github/workflows/hpcsdk.yaml
@@ -9,7 +9,7 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     container:
       image: nvcr.io/nvidia/nvhpc:23.9-devel-cuda12.2-ubuntu22.04
     steps:
