TL/CUDA: add configure flag

--- a/src/components/tl/cuda/kernels/Makefile.am
+++ b/src/components/tl/cuda/kernels/Makefile.am
@@ -21,7 +21,11 @@ LINK = $(LIBTOOL) --mode=link $(CC) -o $@
 
 comp_noinst = libucc_tl_cuda_kernels.la
 
+if TL_CUDA_NVLS_ENABLED
 libucc_tl_cuda_kernels_la_SOURCES  = reduce_scatter_kernel.cu
+else
+libucc_tl_cuda_kernels_la_SOURCES  = 
+endif
 
 libucc_tl_cuda_kernels_la_CPPFLAGS =
 
