TL/CUDA: NVLink SHARP (NVLS) Allreduce (#1148)
## What
UCC now supports the latest NVLink SHARP (NVLS) technology, unlocking
advanced hardware features on modern GPUs (H100+). NVLS enables
offloading collective operations to in-network hardware (NVSwitch),
reducing SM usage and improving compute resource efficiency compared to
traditional GPU-based implementations.
Allreduce initial implementation with NVLS. (NVLS related initialization
you could find in #1144 )

## Why ?

![image](https://github.com/user-attachments/assets/a3393fef-3d2f-4e39-8998-4c76dd325b2b)
Command line:
```
mpirun --mca coll ^hcoll --mca coll_ucc_enable 0 -x LD_LIBRARY_PATH=/.autodirect/swgwork/ikryukov/ucc_build/install/lib:$LD_LIBRARY_PATH -x UCC_TLS=cuda,ucp -x UCC_LOG_LEVEL=info -x UCC_TL_CUDA_TUNE=allreduce:cuda:@0 -np 8 /.autodirect/swgwork/ikryukov/ucc_build/install/bin/ucc_perftest -c allreduce -F -m cuda -b 1k -e 16M -d float32 -o sum
```

--- a/src/components/tl/cuda/Makefile.am
+++ b/src/components/tl/cuda/Makefile.am
@@ -40,15 +40,21 @@ reduce_scatter =                           \
 	reduce_scatter/reduce_scatter_ring.c   \
 	reduce_scatter/reduce_scatter_linear.c
 
-if TL_CUDA_NVLS_ENABLED
-reduce_scatter += reduce_scatter/reduce_scatter_nvls.c
-endif
-
 reduce_scatterv =                            \
 	reduce_scatterv/reduce_scatterv.h        \
 	reduce_scatterv/reduce_scatterv.c        \
 	reduce_scatterv/reduce_scatterv_ring.c   \
-	reduce_scatterv/reduce_scatterv_linear.c	
+	reduce_scatterv/reduce_scatterv_linear.c
+
+allreduce =                    \
+	allreduce/allreduce.h      \
+	allreduce/allreduce.c
+
+if TL_CUDA_NVLS_ENABLED
+reduce_scatter += reduce_scatter/reduce_scatter_nvls.c
+
+allreduce += allreduce/allreduce_nvls.c
+endif
 
 sources =               \
 	tl_cuda.h           \
@@ -65,6 +71,7 @@ sources =               \
 	$(alltoall)         \
 	$(alltoallv)        \
 	$(bcast)            \
+	$(allreduce)        \
 	$(reduce_scatter)   \
 	$(reduce_scatterv)
 
